overflow correction

--- a/src/components/NavBar/NavBar.scss
+++ b/src/components/NavBar/NavBar.scss
@@ -1,4 +1,5 @@
 .navBarContainer {
+  position: relative;
   display: flex;
   justify-content: flex-end;
   width: 100%;
