--- a/src/index.css
+++ b/src/index.css
@@ -19,6 +19,6 @@ body {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  box-sizing: border-box;
-  overflow-x: hidden;
+  
+
 }
